test/users/vass/compilerAssert/compilerAssert50.good
compilerAssert50.chpl:2: error: assert failed - aaaaa
