test/users/vass/compilerAssert/compilerAssert50.chpl

compilerAssert(false, "a", "a", "a", "a", "a", 0);
